<resources>
    <string name="app_name">Teacher Assistant</string>
    <string name="student_image">student image</string>
    <string name="student_id">2102002</string>
    <string name="student_name">Md. Sohanur Rahman Hridoy</string>
    <string name="present_or_not">Mark</string>
    <string name="this_is_for_confirmation">This is for confirmation</string>
    <string name="are_you_sure_to_finish">Are you sure to finish?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="innovative_tools_for_educators_everywhere">Innovative Tools for Educators Everywhere</string>
    <string name="Acknowledgement">Acknowledgement goes to <b>Md. Sohanur Rahman Hridoy</b>, Student ID-2102002,<b> Md. Khaled Amin Shawon</b>, Student ID-2102003,<b> Md. Zikrul Bari Tomal</b>, Student ID-2102056, B.Sc (Engineering) in C.S.E, Session-21, have developed this Teacher Assistant as their 2nd year academic project under the supervision of<b> Md. Arshad Ali</b>, Professor, dept. of C.S.E HSTU, Dinajpur.</string>
</resources>