<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardElevation="12dp"
    app:cardBackgroundColor="#fa6c3a"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@tools:sample/avatars"
            android:contentDescription="@string/student_image" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/student_id" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/student_name" />
        </LinearLayout>

        <Button
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#e7491d"
            android:backgroundTint="#fff"
            android:layout_gravity="center"
            android:text="@string/present_or_not" />

    </LinearLayout>
</androidx.cardview.widget.CardView>