<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orng_bg"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_21sdp"
        android:paddingRight="@dimen/_21sdp"
        android:paddingBottom="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/are_you_sure_to_finish"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnYes"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#64DD17"
                android:text="@string/yes"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNo"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_weight="1"
                android:backgroundTint="#D50000"
                android:text="@string/no"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>